# oversight-gateway

./: .gitignore  Dockerfile  LICENSE  MIGRATION_V1_TO_V2.md  QUICKSTART.md  README.md  docker-compose.yml  example.py  example_v2.py  pyproject.toml  requirements.txt  test_core.py
oversight_gateway/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  models.py  risk_engine.py  schemas.py  tracing.py  webhooks.py
oversight_gateway/integrations/: __init__.py  langchain.py
oversight_gateway_sdk/: __init__.py
policies/: default.yaml
tests/: __init__.py  test_api.py  test_risk_engine.py  test_sdk.py
